--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 
 @font-face {
   font-family: "Trap";
-  src: url("../assets/fonts/Trap-Bold.otf");
-  src: url("../assets/fonts/Trap-Regular.otf");
+  src: url("./assets/fonts/Trap-Bold.otf");
+  src: url("./assets/fonts/Trap-Regular.otf");
   font-weight: normal;
   font-style: normal;
 }
@@ -25,10 +25,12 @@ body {
   overflow-x: hidden !important;
   background-color: #f5f5f5;
 }
+
 section {
-  height: 100vh;
+  min-height: 100vh;
   margin-bottom: 80px !important;
 }
+
 /* .container {
   max-width: 1200px;
   margin: 0 auto;
