--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -46,10 +46,16 @@ footer {
 }
 
 .item {
-    width: 80px;
+    /* width: 80px;
     height: 80px;
     background-color: #cee7ff;
-    border-radius: 3px;
+    border-radius: 3px; */
+    font-family: 'Trap' !important;
+    color: white;
+    text-decoration: none;
+    margin-right: 40px;
+    font-size: 14px;
+    letter-spacing: 0.5px;
 }
 
 .circles {
@@ -68,8 +74,14 @@ footer {
 }
 
 .foot {
-    height: 20px;
+    /* height: 20px; */
     width: 80vw;
-    background-color: #f0f0f0;
+    font-size: 100px;
+    font-weight: 300;
+    letter-spacing: 5px;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Trap' !important;
+    /* background-color: #f0f0f0; */
     border-radius: 3px;
 }
