--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,28 +1,26 @@
 footer {
     height: 75vh;
-    width: 100vw;
     background-color: #222;
     overflow: hidden;
 }
 
 .footer-container {
-    /* Removed the "section" prefix */
     height: 75vh;
     color: #f0f0f0;
     background-color: #222;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start !important;
 }
 
 .footer-row {
     height: 33.3%;
-    width: 100vw;
     display: flex;
+    width: 100% !important;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: start !important;
 }
 
 .footer-row.center {
@@ -31,10 +29,10 @@ footer {
 }
 
 .logo {
-    width: 400px;
-    height: 80px;
-    background-color: #ffb8b8;
-    border-radius: 3px;
+    /* height: 80px; */
+    font-size: 35px !important;
+    width: 75% !important;
+    text-align: start !important;
 }
 
 .items {
@@ -66,16 +64,16 @@ footer {
     justify-content: space-evenly;
 }
 
-.circle {
-    width: 100px;
-    height: 100px;
-    background-color: #a5dda5;
-    border-radius: 50%;
+/* .circle {} */
+
+.footer-icon {
+    width: 100px !important;
+    height: auto !important;
 }
 
 .foot {
     /* height: 20px; */
-    width: 80vw;
+    /* width: 85vw; */
     font-size: 100px;
     font-weight: 300;
     letter-spacing: 5px;
@@ -84,4 +82,51 @@ footer {
     font-family: 'Trap' !important;
     /* background-color: #f0f0f0; */
     border-radius: 3px;
+}
+
+@media (max-width: 767px) {
+
+    .foot {
+        /* height: 20px; */
+        width: 85vw;
+        font-size: 35px;
+        font-weight: 600;
+        letter-spacing: 5px;
+    }
+
+    .circles {
+        display: none !important;
+    }
+
+    .items {
+        width: 100% !important;
+        /* background-color: pink; */
+        justify-content: flex-start;
+    }
+
+    .item {
+        margin-right: auto;
+    }
+
+    .footer-row {
+        width: 100% !important;
+        /* padding: 0px !important; */
+        /* justify-content: start !important; */
+    }
+
+    .footer-row.center {
+        /* justify-content: sp !important; */
+        height: 100px !important;
+        width: 100% !important;
+    }
+
+    .logo {
+        padding: 10px;
+        width: 100% !important;
+        font-size: 18px !important;
+        text-align: start !important;
+    }
+
+
+
 }
