--- a/src/sections/contact-us/contactUs.css
+++ b/src/sections/contact-us/contactUs.css
@@ -10,50 +10,58 @@
 
 .contact-form {
     border-radius: 30px !important;
-    padding: 60px !important;
+    padding: 60px 30px !important;
     background-color: #FFF;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-direction: column !important;
     width: 500px !important;
-
 }
 
 .contact-form-header {
-    width: 404px;
-    height: 60.26px;
     font-weight: 600;
     font-size: 32px;
     line-height: 35px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: center;
     color: #000000;
+}
+
+.form-inputs-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .btn-contact {
     background: black !important;
     border-radius: 15px !important;
-    width: 400px;
+    width: 80% !important;
     height: 50px;
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
     color: white;
     border: none !important;
+    margin: 10px auto;
 }
 
-.contact-form input {
-    width: 400px !important;
+.form-inputs-container .form-group {
+    width: 80%;
+    margin: 0 auto 15px;
+}
+
+.form-inputs-container input {
     padding: 12px;
-    margin-bottom: 15px;
     border: 1px solid #ddd;
     border-radius: 10px;
     font-size: 16px;
     outline: none;
 }
 
-.contact-form input:focus {
+.form-inputs-container input:focus {
     border-color: #000;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
@@ -78,4 +86,43 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+}
+
+@media screen and (max-width: 768px) {
+    .contact-form-header {
+        font-size: 24px;
+        line-height: 28px;
+        width: 100%;
+    }
+
+    .btn-contact {
+        font-size: 16px;
+        line-height: 20px;
+        width: 90% !important;
+    }
+
+    .contact-form input {
+        font-size: 14px;
+    }
+
+    .contact-heading {
+        font-size: 40px !important;
+        line-height: 45px !important;
+    }
+
+    .contact-description {
+        font-size: 16px !important;
+        line-height: 18px !important;
+    }
+
+    .contact-form {
+        border-radius: 30px !important;
+        padding: 30px 15px !important;
+        background-color: #FFF;
+        width: 90% !important;
+    }
+
+    .contact-form .form-group {
+        width: 90%;
+    }
 }
