--- a/src/sections/solutions/solutions.css
+++ b/src/sections/solutions/solutions.css
@@ -1,20 +1,15 @@
-.solution-container {
-  height: 90vh;
-  display: flex;
-  align-items: center;
-}
-
 .content-wrapper {
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between !important;
 }
 
 .intro-text {
-  margin-bottom: 20px;
-  font-size: 18px !important;
-  font-family: "Trap";
-  color: #434242 !important;
+  margin-bottom: 30px !important;
+  /* font-size: 18px !important; */
+  /* font-family: "Trap"; */
+  color: #2c2c2c !important;
   font-weight: 100 !important;
 }
 
@@ -78,35 +73,11 @@
 }
 
 @media screen and (max-width: 767px) {
-  .solution-container {
-    gap: 2rem;
-  }
 
   #sol-img3 {
     width: 100% !important;
     height: 300px !important;
     object-fit: cover !important;
     margin-top: 1.5rem;
-  }
-}
-
-.common-button {
-  width: 180px;
-  height: 39.73px;
-  text-transform: uppercase;
-  border: 1px black solid;
-  background-color: white;
-  border-radius: 5px;
-  justify-content: space-evenly;
-  justify-items: center;
-  align-items: center;
-}
-
-@media screen and (max-width: 767px) {
-  #sol-img3 {
-    width: 100% !important;
-    height: 250px !important;
-    object-fit: cover !important;
-    border-radius: 15px !important;
   }
 }
