--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -41,6 +41,7 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    cursor: pointer !important;
 }
 
 .item {
