--- a/src/sections/contact-us/contactUs.css
+++ b/src/sections/contact-us/contactUs.css
@@ -80,11 +80,11 @@
     font-family: 'Trap' !important;
     font-style: normal !important;
     text-align: start !important;
-    font-weight: 700 !important;
+    font-weight: 500 !important;
     font-size: 20px !important;
-    line-height: 22px !important;
+    line-height: 24px !important;
     text-align: center;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     color: #FFFFFF;
 }
 
