--- a/src/sections/our-services/services.css
+++ b/src/sections/our-services/services.css
@@ -129,7 +129,7 @@
 }
 
 .service-details-mobile {
-    background-color: #f9f9f9;
+    background-color: white;
     transition: height 0.4s ease, opacity 0.4s ease;
 }
 
