--- a/src/sections/about-us/AboutUs.css
+++ b/src/sections/about-us/AboutUs.css
@@ -7,6 +7,7 @@
     color: black !important;
     border-radius: 5px;
     justify-content: space-evenly;
+    text-decoration: none !important;
     justify-items: center;
     align-items: center;
 }
